<resources>
    <string name="app_name">Grigarage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Loading screens -->
    <string name="fast_delivery_text">We carefully monitor delivery time and delivery quality, which is why food comes to you straight from the garden</string>
    <string name="fast_deliveries">Fast deliveries</string>
    <string name="next_page">Next</string>
    <string name="our_garden">Our garden</string>
    <string name="garden_text">We grow our own vegetables for our restaurant, which guarantees excellent taste and a set of vitamins</string>
    <string name="waisting_time">Waisting time</string>
    <string name="waisting_text">There is no longer any need to waste time on long preparation of food; affordable prices and fast service are always ready for your arrival</string>
    <string name="finish_page">Finish</string>
    <!-- bottom menu -->
    <string name="home_bot_menu">Home</string>
    <string name="cart_bot_menu">Cart</string>
    <string name="favourite_bot_menu">Favourite</string>
    <string name="profile_bot_menu">Profile</string>
    <string name="explore_bot_menu">Explore</string>
    <!-- profile screen -->
    <string name="profile_image_descr_avatar">avatar</string>
    <string name="user_name">Mahsa Hayati</string>
    <string name="user_mail">Mahsahty@gmail.com</string>
    <string name="profile_selection">Profile</string>
    <string name="my_order_selection">My order</string>
    <string name="my_cart_selection">My cart</string>
    <string name="my_address_selection">My address</string>
    <string name="help_selection">Help</string>
    <string name="about_selection">About</string>
    <string name="log_out_selection">LOG OUT</string>

    <!-- profile screen -->
    <string name="search_hint">Search</string>
    <string name="hi_home_frag">Hi,Mahsa</string>
    <string name="categories_menu">Categories</string>
    <string name="see_all_menu">See all</string>
    <string name="best_selling_menu">Best Selling</string>
    <string name="categories_explore">Categories</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="empty_cart">Your car is empty</string>
    <string name="subtotal_cart">Subtotal</string>
    <string name="price_cart">$43.00</string>
    <string name="discount_cart">Discount</string>
    <string name="zero_cart">$0</string>
    <string name="delivery_cart">Delivery</string>
    <string name="free_delivery_cart">Free</string>
    <string name="total_cart">Total</string>
    <string name="place_order_button_cart">Place order</string>
    <string name="title_favourite">Favourite</string>
    <string name="empty_favourite">No favourite :(</string>

</resources>