<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home_bot_menu" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/search"
        android:title="@string/explore_bot_menu" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/shopping_cart"
        android:title="@string/cart_bot_menu" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/heart"
        android:title="@string/favourite_bot_menu" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/profile_bot_menu" />
</menu>